Flexbox issue on safari

--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ h3 {
   -webkit-flex-flow: row wrap;
   flex-flow: row wrap;
   justify-content: space-evenly;
+  align-items: flex-start;
 }
 
 .flex-item {
